path/spline WIP